Work on moduralizing - #6.